se agregan los crossOrigin para poder establecer conexion con el front

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521/orcl
 spring.datasource.username=fvega
-spring.datasource.password=imTh3L4w
+spring.datasource.password=f3rr4r1C4rs
 spring.jpa.show-sql=true
